Bug 1551820 - Fix contrast on text and update button colors

--- a/remo/base/static/base/css/app-fd4.less
+++ b/remo/base/static/base/css/app-fd4.less
@@ -78,7 +78,7 @@ p {
 
 a:link,
 a:visited {
-    color: rgb(41, 131, 200);
+    color: #0060df;
     text-decoration:none;
     -moz-transition: all .3s ease-in;
     -webkit-transition: all .3s ease-in;
@@ -88,7 +88,7 @@ a:visited {
 a:hover,
 a:active,
 a:focus {
-    color: rgb(32, 103, 158);
+    color: #0a84ff;
     -moz-transition: all .3s ease-out;
     -webkit-transition: all .3s ease-out;
     transition: all .3s ease-out;
@@ -135,7 +135,6 @@ h6 {
 }
 
 .required-field {
-    .grayed;
     font-family: 'ModernPictogramsNormal';
     font-size: 12px;
     float: right;
@@ -228,7 +227,6 @@ select {
 }
 
 label.required:after {
-    .grayed;
     font-family: 'ModernPictogramsNormal';
     content: '\*';
     margin-left: .5em;
@@ -298,7 +296,7 @@ label.required:after {
 .alert-box.warning {
     background-color: #f68b01;
     border-color: #f68b01;
-    color: #fff;
+    color: #000;
 }
 
 .alert-box.error {
@@ -358,19 +356,13 @@ label.required:after {
     .opensans;
     color: #333;
     background-color: #e9e9e9;
-    background-image: -moz-linear-gradient(top, rgba(255,255,255,0.6) 0%, rgba(255,255,255,0.3) 50%, rgba(255,255,255,0.0) 51%, rgba(255,255,255,0.2) 100%);
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.6)), color-stop(50%,rgba(255,255,255,0.3)), color-stop(51%,rgba(255,255,255,0.0)), color-stop(100%,rgba(255,255,255,0.2)));
-    background-image: -webkit-linear-gradient(top, rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.3) 50%,rgba(255,255,255,0.0) 51%,rgba(255,255,255,0.2) 100%);
-    background-image: -o-linear-gradient(top, rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.3) 50%,rgba(255,255,255,0.0) 51%,rgba(255,255,255,0.2) 100%);
-    background-image: -ms-linear-gradient(top, rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.3) 50%,rgba(255,255,255,0.0) 51%,rgba(255,255,255,0.2) 100%);
-    background-image: linear-gradient(to bottom, rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.3) 50%,rgba(255,255,255,0.0) 51%,rgba(255,255,255,0.2) 100%);
-    border: 1px solid #cacaca;
     -webkit-border-radius: 3px;
     border-radius: 3px;
+    border-style: none;
+    border-color: none;
     &:hover, &:focus {
         background-color: #dadada;
         color: #333;
-        outline: none;
     }
 }
 
@@ -392,31 +384,27 @@ label.required:after {
 
 .button.alert {
     color: #fff;
-    background-color: #e91c21;
-    border: 1px solid #b90b0b;
+    background-color: #d70022;
     text-shadow: 0 -1px 1px rgba(0,0,0,0.28);
     &:hover, &:focus {
-        background-color: #d01217;
+        background-color: #ff0039;
     }
 }
 
 .button.confirm {
     color: #fff;
-    background-color: #5b8737;
-    border: 1px solid #4a6b2d;
+    background-color: #003706;
     text-shadow: 0 -1px 1px rgba(0,0,0,0.28);
     &:hover, &:focus {
-        background-color: #699c40;
+        background-color: #006504;
     }
 }
 
 .button.update {
     color: #fff;
-    background-color: #00a6fc;
-    border: 1px solid #0593dc;
-    text-shadow: 0 -1px 1px rgba(0,0,0,0.28);
+    background-color: #002275;
     &:hover, &:focus {
-        background-color: #0192dd;
+        background-color: #003eaa;
     }
 }
 
@@ -461,7 +449,6 @@ label.required:after {
         padding: 0 15px;
         display: block;
         &:focus {
-            outline: none;
             text-decoration: underline;
         }
     }
@@ -855,7 +842,6 @@ label.required:after {
         margin-top: .2em;
         padding: 0 5px;
         &:focus {
-            outline: none;
             .pict-icon.large:after {
                 .grayed;
             }
@@ -919,10 +905,6 @@ label.required:after {
     -moz-box-shadow: 0 2px 5px gray;
 }
 
-.grid-profile:focus {
-    outline: none;
-}
-
 .grid-profile-image {
     height: 50px;
     img {
@@ -953,13 +935,11 @@ label.required:after {
 }
 
 .profiles-no-results {
-    .grayed;
     margin-bottom: 20px;
     text-align: center;
 }
 
 .reps-number {
-    .grayed;
     font-size: 12px;
     margin: 20px 0;
     text-align: center;
@@ -993,7 +973,6 @@ label.required:after {
 }
 
 .profile-image {
-    .grayed;
     .top-margined;
     text-align: center;
     font-size: 10px;
@@ -1030,7 +1009,6 @@ textarea.flat:focus {
 }
 
 .more-info {
-    .grayed;
     font-size: 10px;
     text-align: right;
     margin-top: -5px;
@@ -1536,7 +1514,6 @@ table .pictogram-button .pict-icon.large {
 #about p {
     font-size: 16px;
     line-height: 24px;
-    color: #777;
     text-align: left;
     .opensanslight;
 }
@@ -2334,7 +2311,6 @@ meter::-o-meter-suboptimum-value {
     .opensans;
     font-weight: bold;
     font-size: 15px;
-    .grayed;
     text-shadow: 1px 1px 0px rgba(200, 200, 200, 0.75);
 }
 
@@ -2346,7 +2322,6 @@ meter::-o-meter-suboptimum-value {
 .events-table-date-day {
     .metabold;
     font-size: 20px;
-    .grayed;
     text-shadow: 1px 1px 0px rgba(200, 200, 200, 0.75);
 }
 
@@ -2358,7 +2333,6 @@ meter::-o-meter-suboptimum-value {
 .events-table-date-year {
     .metabold;
     font-size: 15px;
-    .grayed;
     text-shadow: 1px 1px 0px rgba(200, 200, 200, 0.75);
 }
 
@@ -2393,7 +2367,6 @@ meter::-o-meter-suboptimum-value {
 
 .events-table-location {
     .align-right;
-    .grayed;
     font-size: 13px;
     line-height: 1.5em;
 }
@@ -2409,7 +2382,6 @@ meter::-o-meter-suboptimum-value {
 }
 
 .events-table-owner-tag {
-    .grayed;
     font-style: italic;
 }
 
@@ -2419,7 +2391,6 @@ meter::-o-meter-suboptimum-value {
 
 .events-table-expected {
     .align-right;
-    .grayed;
     font-size: 10px;
 }
 
@@ -2443,7 +2414,6 @@ meter::-o-meter-suboptimum-value {
 .voting-single-date {
     padding: 10px;
     margin-bottom: 20px;
-    .grayed;
     .vertical-gradient();
     border: none;
     box-shadow: 0 2px 5px rgba(0,0,0,0.15);
@@ -2483,7 +2453,6 @@ meter::-o-meter-suboptimum-value {
         right: 0;
     }
     .pict-icon.time:after {
-        .grayed;
         margin: 0;
         text-align: left;
     }
@@ -2510,7 +2479,6 @@ meter::-o-meter-suboptimum-value {
     }
     .date-times {
         .opensanslight;
-        .grayed;
         text-align: left;
         border-left: 1px solid #ddd;
         border-bottom: none;
@@ -2604,7 +2572,6 @@ meter::-o-meter-suboptimum-value {
 }
 
 .event-single-attendee-text {
-    .grayed;
     .align-right;
     font-style: italic;
     margin: 0;
@@ -2684,7 +2651,6 @@ meter::-o-meter-suboptimum-value {
         margin-bottom: 10px;
         padding: 0;
         max-width: 50px;
-        .grayed;
         .vertical-gradient();
         border: none;
         box-shadow: 0 2px 5px rgba(0,0,0,0.15);
@@ -3060,7 +3026,6 @@ meter::-o-meter-suboptimum-value {
             &:hover,
             &:active,
             &:focus {
-                outline: none;
                 background: #fff;
             }
         }
@@ -3136,9 +3101,19 @@ meter::-o-meter-suboptimum-value {
 }
 
 .no-bugs {
-    .grayed;
     margin-bottom: 5px;
     text-align: center;
+}
+
+.sub-nav dt a,
+.sub-nav dd a {
+    color: #333;
+}
+
+.sub-nav dt.active a,
+.sub-nav dd.active a {
+    background-color: #003eaa;
+    color: #fff;
 }
 
 .dashboard-box {
@@ -3178,8 +3153,8 @@ table tr.assigned-request:nth-of-type(2n) {
 }
 
 .attribution > p {
-    .grayed;
     font-size: 13px;
+    text-align: center;
     position: absolute;
     bottom: 0px;
 }
@@ -3249,7 +3224,6 @@ table tr.assigned-request:nth-of-type(2n) {
             line-height: 1.7;
             width: 20%;
             .date-range {
-                .grayed;
                 .opensanslight;
                 display: block;
                 font-weight: normal;
@@ -3267,7 +3241,6 @@ table tr.assigned-request:nth-of-type(2n) {
             height: 45px;
         }
         tfoot tr th, thead tr th {
-                    .grayed;
             font-size: 12px;
             text-align: center;
         }
